# myhumbleself

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: coverage.yml  python.yml
myhumbleself/: app.py  camera.py  config.py  face_detection.py  processing.py  processor.py  structures.py  video_handler.py  webcam.py
myhumbleself/resources/: LICENSE  demo.mp4.REMOVED.git-id  myhumbleself.gresource  myhumbleself.gresource.REMOVED.git-id  placeholder.jpg.REMOVED.git-id  style.css  window.cmb  window.ui
resources/: LICENSE  myhumbleself.gresource.xml  placeholder.svg.REMOVED.git-id  placeholder.xcf.REMOVED.git-id  screencast.webm  screencast.webm.REMOVED.git-id  screencast_raw.webm.REMOVED.git-id  screenshot-00.png.REMOVED.git-id  screenshot-01.png.REMOVED.git-id  screenshot-01.xcf  screenshot-01.xcf.REMOVED.git-id  screenshot-02.png.REMOVED.git-id  screenshot-02.xcf  screenshot-02.xcf.REMOVED.git-id  style.css  window.cmb  window.ui
tests/: test_app.py  test_camera.py
